# ethos

./: .dockerignore  .gitignore  CNAME  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  rust.yml  tauri.yml
birdie/: .eslintrc.cjs  README.md  package.json  tailwind.config.cjs
birdie/src/: app.html
birdie/src-tauri/: Cargo.toml  tauri.conf.json
birdie/src-tauri/capabilities/: desktop.json  migrated.json
birdie/src-tauri/icons/: icon.icns
birdie/src-tauri/src/: command.rs  lib.rs  main.rs  server.rs  state.rs
birdie/src-tauri/src/config/: mod.rs  router.rs
birdie/src-tauri/src/metadata/: character.rs  mod.rs  router.rs
birdie/src-tauri/src/repo/: clone.rs  config.rs  file.rs  lfs.rs  locks.rs  log.rs  mod.rs  pull.rs  push.rs  refetch.rs  revert.rs  router.rs  show.rs  status.rs
birdie/src-tauri/src/repo/diagnostics/: mod.rs  rebase.rs
birdie/src-tauri/src/system/: mod.rs  router.rs  terminal.rs  update.rs
birdie/src-tauri/src/tools/: mod.rs  router.rs
birdie/src-tauri/src/types/: config.rs
birdie/src/lib/: auth.ts  config.ts  consts.ts  metadata.ts  repo.ts  stores.ts  system.ts  tools.ts  types.ts  utils.ts
birdie/src/lib/icons/: UnrealEngineLogo.svelte
birdie/src/routes/: +layout.svelte  +page.svelte
birdie/static/assets/: PIZZA.fbx
core/: Cargo.toml
core/src/: fs.rs  lib.rs  longtail.rs  msg.rs  operations.rs  worker.rs
core/src/auth/: mod.rs  sso.rs
core/src/clients/: argo.rs  aws.rs  command.rs  git.rs  git_maintenance_runner.rs  github.rs  kube.rs  mod.rs  obs.rs
core/src/middleware/: mod.rs  nonce.rs  uri.rs
core/src/storage/: config.rs  entry.rs  list.rs  mod.rs
core/src/storage/mock/: mod.rs
core/src/storage/s3/: mod.rs
core/src/tauri/: command.rs  error.rs  mod.rs
core/src/types/: aws.rs  builds.rs  commits.rs  config.rs  errors.rs  gameserver.rs  locks.rs  logs.rs  mod.rs  playtests.rs  project.rs  repo.rs  utrace.rs
core/src/types/argo/: mod.rs  workflow.rs
core/src/types/github/: commits.rs  merge_queue.rs  mod.rs  pulls.rs  status.rs  user.rs
core/src/types/github/graphql/: dequeue_pull_request.graphql  enqueue_pull_request.graphql  get_commit_merge_timestamps.graphql  get_commit_statuses.graphql  get_merge_queue.graphql  get_pull_request.graphql  get_pull_request_id.graphql  get_pull_requests.graphql  get_username.graphql  is_branch_pr_open.graphql  schema.graphql
core/src/utils/: commit.rs  json.rs  junit.rs  logging.rs  mod.rs  process.rs  serde.rs  tracing.rs  update.rs  windows.rs
core/ui/: .eslintrc.cjs  .gitignore  .prettierignore  package.json  tailwind.config.cjs
core/ui/src/lib/: index.ts
core/ui/src/lib/components/: ErrorToast.svelte  ErrorToastStack.svelte  Pizza.svelte  ProgressModal.svelte  SuccessToast.svelte
core/ui/src/lib/components/repo/: CommitTable.svelte  ModifiedFilesCard.svelte
core/ui/src/lib/types/: index.ts  repo.ts
friendshipper/: .commitlintrc.json  .prettierignore  README.md  package.json  tailwind.config.cjs
friendshipper/.husky/: commit-msg  pre-commit
friendshipper/docs/: build-artifacts.md  setup.md  sourcecontrol.md
friendshipper/server/: Cargo.toml  Dockerfile
friendshipper/server/src/: lib.rs  main.rs
friendshipper/server/src/aws/: router.rs
friendshipper/server/src/config/: router.rs
friendshipper/server/src/discovery/: mod.rs  router.rs
friendshipper/src-tauri/: Cargo.toml  tauri.conf.json
friendshipper/src-tauri/capabilities/: desktop.json  migrated.json
friendshipper/src-tauri/icons/: icon.icns
friendshipper/src-tauri/src/: command.rs  lib.rs  main.rs  server.rs  state.rs
friendshipper/src-tauri/src/assets/: windows.rc
friendshipper/src-tauri/src/auth/: mod.rs  router.rs
friendshipper/src-tauri/src/builds/: mod.rs  router.rs
friendshipper/src-tauri/src/client/: mod.rs
friendshipper/src-tauri/src/config/: mod.rs  router.rs
friendshipper/src-tauri/src/engine/: mod.rs  provider.rs  router.rs
friendshipper/src-tauri/src/engine/unreal/: mod.rs  ofpa.rs  provider.rs  router.rs
friendshipper/src-tauri/src/ludos/: mod.rs  router.rs
friendshipper/src-tauri/src/obs/: mod.rs  router.rs
friendshipper/src-tauri/src/playtests/: router.rs
friendshipper/src-tauri/src/repo/: mod.rs  router.rs
friendshipper/src-tauri/src/repo/operations/: branch_compare.rs  browse.rs  changeset.rs  checkout.rs  clone.rs  commit_info.rs  diff.rs  download_dlls.rs  file_history.rs  install_git_hooks.rs  log.rs  mod.rs  pull.rs  push.rs  refetch.rs  reset.rs  restore.rs  revert.rs  show.rs  snapshot.rs  status.rs  update_engine.rs  validate.rs  zip_changes.rs
friendshipper/src-tauri/src/repo/operations/diagnostics/: github_status.rs  mod.rs  object_count.rs  rebase.rs
friendshipper/src-tauri/src/repo/operations/gh/: auto_merge_submit.rs  code_submit.rs  commits.rs  merge_queue.rs  mod.rs  pulls.rs  submit.rs  user.rs
friendshipper/src-tauri/src/repo/operations/locks/: lock.rs  mod.rs  verify.rs
friendshipper/src-tauri/src/repo/project/: mod.rs  router.rs
friendshipper/src-tauri/src/servers/: mod.rs  router.rs
friendshipper/src-tauri/src/storage/: router.rs
friendshipper/src-tauri/src/system/: git.rs  logs.rs  mod.rs  router.rs  terminal.rs  unreal.rs  update.rs
friendshipper/src-tauri/src/utrace/: router.rs
friendshipper/src-tauri/tests/: builds.rs  repo.rs
friendshipper/src-tauri/tests/common/: mod.rs
friendshipper/src/lib/: auth.ts  builds.ts  config.ts  consts.ts  engine.ts  gameServers.ts  http.ts  ludos.ts  okta.ts  playtests.ts  regions.ts  repo.ts  stores.ts  system.ts  types.ts  utils.ts  utrace.ts
friendshipper/src/lib/components/: CommitInfoModal.svelte  ConfirmModal.svelte  EmojiStatus.svelte  FileHistoryModal.svelte  FileHistoryPanel.svelte  PromoteBuildModal.svelte
friendshipper/src/lib/icons/: UnrealEngineLogoNoCircle.svelte
friendshipper/src/routes/: +layout.svelte  +page.svelte
friendshipper/src/routes/builds/: +page.svelte
friendshipper/src/routes/playtests/: +page.svelte
friendshipper/src/routes/servers/: +page.svelte
(+41 files in other folders)
