[workspace]
resolver = "2"
default-members = ["birdie/src-tauri", "core", "friendshipper/src-tauri"]
members = [
    "birdie/src-tauri",
    "core",
    "friendshipper/src-tauri",
]

[workspace.dependencies]
anyhow = "1.0.72"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
directories-next = "2.0.0"
keyring = "2"
lazy_static = { version = "1.4.0", features = [] }
log = "0.4.20"
octocrab = "0.39.0"
open = "5.0.0"
opentelemetry = "0.21.0"
opentelemetry-otlp = { version = "0.14.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
regex = "1.9.3"
retry = "2.0.0"
self-replace = "1.3.5"
semver = "1.0.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.4", features = ["json"] }
serde_yaml = "0.9"
rmp-serde = "1.3"
sysinfo = "0.30.5"
tauri = { version = "1.5", features = ["process-relaunch", "dialog-open", "window-show", "window-maximize", "window-minimize", "window-close", "window-hide", "window-start-dragging", "window-unmaximize", "window-unminimize", "process-command-api", "system-tray", "notification-all", "shell-open", "devtools", "path-all", "fs-exists", "fs-write-file", "fs-read-file"] }
tempfile = { version = "3.8.1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.17", features = [
    "json",
    "local-time",
    "std",
    "env-filter",
] }
urlencoding = "2.1.3"

ethos-core = { path = "core" }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
