[package]
name = "ethos-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
directories-next = { workspace = true }
keyring = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
open = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
parking_lot = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
retry = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

http = { version = "0.2.9" }

aws-sdk-eks = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ecr = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssooidc = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sso = { version = "1", features = ["behavior-version-latest"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sig-auth = { version = "0.60.1" }
aws-types = { version = "1" }
aws-smithy-http = { version = "0.60.1" }
aws-smithy-types-convert = { version = "0.60.1", features = ["convert-time"] }
aws-smithy-runtime-api = { version = "1.1.1" }
aws-credential-types = { version = "1.1.1", features = [
    "hardcoded-credentials",
] }
aws-sigv4 = { version = "1.1.1" }

kube = { version = "0.87.2", default-features = false, features = [
    "derive",
    "client",
    "jsonpatch",
    "rustls-tls",
] }
kube-derive = { version = "0.87.2" }
log-panics = { version = "2", features = ["with-backtrace"] }
base64 = "0.21.2"
pem = "3.0.2"
schemars = "0.8.12"
k8s-openapi = { version = "0.20.0", features = ["v1_24"] }
rand = "0.8.5"
hex = "0.4"
sha2 = "0.10.6"
ureq = "2.6.2"
which = "4.4.0"
json-patch = "1.1.0"
ring = "0.17"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
obws = "0.11.5"
futures = "0.3.29"
toml = "0.8.8"
async-trait = "0.1"
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
walkdir = "2.5.0"
