[package]
name = "birdie"
version = "1.0.7"
description = "Birdie"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
directories-next = { workspace = true }
keyring = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
open = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true, features = ["fs-read-file"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

ethos-core = { workspace = true }

octocrab = "0.32.0"

aws-sdk-s3 = { version = "1" }
walkdir = "2.4.0"
fs_extra = "1.3.0"
futures = "0.3.30"
structopt = "0.3.26"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

