[package]
version = "5.0.10"
name = "friendshipper"
description = "Friendshipper"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-manifest = "1.3.1"
tauri-build = { version = "2", features = [] }


[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
directories-next = { workspace = true }
keyring = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
octocrab = { workspace = true }
open = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
retry = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }
sysinfo = { workspace = true }
tauri = { version = "2", features = [ "macos-private-api", "devtools", "tray-icon"] }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

ethos-core = { workspace = true }

async-trait = "0.1"
tauri-plugin-deep-link = "0.1.2"
log-panics = { version = "2", features = ["with-backtrace"] }
thiserror = "1.0.47"
base64 = "0.21.2"

aws-sdk-s3 = { version = "1" }

fs_extra = "1.3.0"

json-patch = "1.1.0"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
obws = "0.11.5"
k8s-openapi = { version = "0.20.0", features = ["v1_24"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
futures = "0.3.30"
serde-xml-rs = "0.6.0"
dirs = "5.0.1"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard = "2.1.11"

[target.'cfg(target_os = "macos")'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace", "tracing-subscriber"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.51"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
